# Manaka-MOD-Station

./: .gitignore  GPT.md  PracticeApp.spec  README.md  index.html  package-lock.json  package.json  塞雷卡mission mod编写教程.docx  底层提示词.md  底层提示词2.md  底层提示词3.md  底层提示词4.md  底层提示词5.md  底层提示词6.md  底层提示词7.md  提示词.md
GUI/: main_window.py
GUI/tabs/: about_tab.py  json_creator_tab.py  mod_manager_tab.py
_legacy/: main.py  requirements.txt
_legacy/GUI/: __init__.py
_legacy/src/: update_checker.py  version.py
database/CustomMissions/: 00 ApartBond.json  00 ApartDildo.json  00 ApartDildo2.json  00 ApartMas.json  00 ApartMas3.json  00 ApartMas4.json  00 Apartpee.json  00 ConBond.json  00 ConDildo.json  00 ConDildo2.json  00 ConMas.json  00 ConWalk.json  00 Conpee.json  00 DownBond.json  00 DownDildo.json  00 DownMas.json  00 DownMas2.json  00 MallBond.json  00 MallDildo.json  00 MallMas.json  00 ParkBond.json  00 ParkDildo.json  00 ParkMas.json  00 ResBond.json  (+101 more)
docs/: packaging.md
scripts/: generate-updater-manifest.ps1
src/: App.css  App.tsx  config.py  game_sync.py  main.tsx  mission_validator.py  mod_manager.py  settings_manager.py  update_checker.py  version.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: cargo-runner.ps1  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  game_sync.rs  mod.rs  mod_manager.rs  settings.rs  updater.rs  validator.rs
tools/: build_exe.ps1  recreate_repo_api.ps1  recreate_repo_gh.ps1  test_import_update_checker.py
(+32 files in other folders)
