[package]
name = "manaka-mod-station"
version = "1.1.0"
description = "Manaka MOD Station - SecretFlasherManaka Mod Manager"
authors = ["FelixChaos"]
edition = "2021"

[lib]
name = "manaka_mod_station_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
ureq = { version = "2", features = ["json"] }
window-vibrancy = "0.6"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Foundation"] }

